refactor: address warnings and make properties more readable

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,32 @@
-server.port=8080
-spring.datasource.url=jdbc:h2:file:./gatekeepdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# ===================================================================
+# APPLICATION CONFIGURATION
+# ===================================================================
+
+# IMPORT EXTERNAL SETTINGS
+spring.config.import=classpath:datasource.properties
+
+# JPA/HIBERNATE SETTINGS
+# By default, Spring Boot uses 'create-drop' for embedded databases, which wipes data on shutdown.
+# Setting this to 'update' tells Hibernate to update the schema if the entity models change,
+# which preserves the.data between application restarts.
 spring.jpa.hibernate.ddl-auto=update
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.jpa.open-in-view=true
+
+# PROJECT-SPECIFIC SETTINGS
+spring.application.name=gatekeep
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.show-sql=true
+server.port=8080
+
+# FILE UPLOAD SETTINGS
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+# SERVER SETTINGS
+server.tomcat.trust-forwarded=true
 spring.thymeleaf.cache=false
+
+# ESSENTIAL PROXY CONFIGURATION
+server.forward-headers-strategy=framework
+server.tomcat.internal-proxies=127\\.0\\.0\\.1|localhost|::1
+server.tomcat.host-header=host
